# corvus-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  DESIGN.md  Dockerfile  Dockerfile.backend  HACKATHON_STATUS.md  LICENSE.md  PLAN-REVIEW-LOG.md  PLAN.md  PRODUCT.md  PROJECT_LOG.md  QUESTIONS.md  README.md  ROADMAP.md  SECURITY_REVIEW.md  V1_SOURCE_MANIFEST.json  compose.platform-test.yaml  compose.yaml  pyproject.toml
.antigravity/website-blueprint/: CHANGE_PLAN.md  COMPONENT_ADOPTION_MAP.json  DESIGN_AUDIT_REPORT.md  DESIGN_SCORECARD_CRITERIA.json  DESIGN_SCORECARD_RESULT.json  EXPERIENCE_STORYBOARD.json  FRONTEND_CRAFT_BRIEF.md  INTERACTION_SPEC.json  PROJECT_CONTEXT.md  REFERENCE_RESEARCH.md  SECTION_PLAN.json  SOURCE_MANIFEST.json  VISUAL_COMPOSITION_DRAFT.md  VISUAL_TARGET.md
.github/: CODEOWNERS  GUARDRAIL_CHECKLIST.md  THREAT_MODEL.md
.github/workflows/: certification.yml  desktop-release.yml  security-scan.yml
.hermes/plans/: corvus-milestone-0-5.md  m005-review-fixes.md
.superpowers/sdd/: fasttrack-frontend-report.md  task-2.1-report.md  task-2.2-report.md
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.release.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/autogenerated/: get_background_mode.toml  load_desktop_preferences.toml  save_artifact_file.toml  save_desktop_preferences.toml  select_repository_directory.toml  set_background_mode.toml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: HOSTED_RUNTIME_SECURITY.md  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
corvus/: __init__.py  __main__.py  chat_agent.py  cli.py  codex_cli.py  codex_install.py  config.py  context.py  conversations.py  database.py  delivery.py  evals.py  interactive.py  memory.py  model_catalog.py  models.py  onboarding.py  onboarding_tui.py  orchestration.py  policy.py  provider_control.py  providers.py  quarantine.py  safe_process.py  sandbox.py  security.py  skills.py  snapshot.py  store.py  tui.py  verification.py  workflow.py
corvus/application/: __init__.py  agent_runtime.py  authorization.py  conversations.py  identity.py  oauth.py  ports.py  projects.py  sync.py
corvus/domain/: __init__.py  access.py  account.py  agent_runtime.py  audit.py  client.py  conversations.py  deployment.py  execution.py  identity.py  request.py  scope.py  sync.py  workspace.py
openapi/: corvus-mvp.json
scripts/: __init__.py  corvus_mvp_entry.py  generate_supply_chain.py
tests/: fixture_corpus.py  postgres_safety.py
(+323 files in other folders)
