[package]
name = "corvus-desktop"
version = "0.2.0-beta.1"
description = "Supervised desktop shell for the Corvus hackathon MVP"
edition = "2024"
rust-version = "1.85"

[lib]
name = "corvus_desktop"
crate-type = ["lib"]

[[bin]]
name = "corvus-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
hmac = "=0.12.1"
rand = "=0.9.2"
sha2 = "=0.10.9"
tauri = { version = "=2.11.5", features = ["tray-icon"] }
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-notification = "=2.3.3"
tauri-plugin-single-instance = "=2.4.3"
